# cdumay_context

./: Cargo.toml  README.md
src/: context.rs  error.rs  json.rs  lib.rs  toml.rs  xml.rs  yaml.rs
tests/: test_context.rs  test_error.rs
