[package]
name = "cdumay_context"
version = "2.0.0"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library for Context Manipulation and Export"
documentation = "https://docs.rs/cdumay_context"
edition = "2021"
homepage = "https://github.com/cdumay/cdumay_context"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_context"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
reqwest = { version = "0.12", optional = true }

[dev-dependencies]
rand = "0.9"

[features]
json = ['serde_json']
yaml = ["serde_yaml"]
http-headers = ["reqwest", "serde_json"]

[package.metadata.docs.rs]
all-features = true
